<resources>
    <string name="app_name">Tea Time</string>
    <string name="tea_profile"><u>Tea Profile</u></string>
    <string name="default_tea_profile">None</string>
    <string name="tea_status"><u>Status</u></string>
    <string name="default_tea_status">Not Brewing</string>
    <string name="tea_status_brewing">Brewing</string>
    <string name="tea_status_pause">Paused</string>
    <string name="tea_status_finished">Done!</string>
    <string name="time_remaining"><u>Brew Time</u></string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause/Stop</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_delete">Delete</string>
    <string name="spinner_index_tag"></string>
    <string name="btn_add_tea_profile">+</string>
    <string name="popup_tea_name_hint">Enter a tea…</string>
    <string name="popup_title">Add Tea Profile</string>
    <string name="popup_minutes_hint">MM</string>
    <string name="popup_seconds_hint">SS</string>
    <string name="popup_btn_add_tea">Add Tea</string>
    <string name="popup_btn_cancel">Cancel</string>
    <string name="popup_time_label">(Brewing Time)</string>
    <string name="max_time_value">59</string>
    <string name="default_time_value">00</string>
    <string name="default_time">00:00</string>
    <string name="time_end_value">0:00</string>

</resources>
